<resources>
    <string name="app_name">Pizzaria</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Acesso</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email invalido</string>
    <string name="error_invalid_password">Senha invalida</string>
    <string name="error_incorrect_password">senha incorreta</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nome">Nome</string>
    <string name="title_activity_pedido__lista">Pedido_Lista</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_pedido">Pedido</string>
    <string name="nomeUser">nome</string>
    <string name="ftd">Porra nao muda</string>
    <string name="fdp1">Aqui e pior ainda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lista__usuario">Usuario</string>
    <string name="menu_excluir">Excluir</string>
    <string name="menu_sair">Sair</string>
    <string name="title_activity_lista__cliente">Cliente</string>
    <string name="endereco">Endereco</string>
    <string name="fone">Fone</string>
    <string name="title_activity_lista__produto">Produto</string>
    <string name="desc">Descricao</string>
    <string name="qtd">Quantidade</string>
    <string name="vl">Valor</string>
    <string name="title_activity_lista__fornecedor">Fornecedor</string>
    <string name="title_activity_lista__pedido">Pedido</string>
    <string name="title_activity_lista__entregador">Entregador</string>
    <string name="title_activity_cadastro_entregador">Cadastro entregador</string>
    <string name="title_activity_cadastro_fornecedor">Cadastro fornecedor</string>
    <string name="title_activity_cadastro_pedido">Cadastro pedido</string>
</resources>
