<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controlado.Cadastro_usuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:maxLines="1"
                android:singleLine="true"
                android:id="@+id/nomeUsuario"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:hint="@string/prompt_email"
                android:maxLines="1"
                android:singleLine="true"
                android:id="@+id/emailUsuario"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:id="@+id/senhaUsuario"/>
        </android.support.design.widget.TextInputLayout>



        <RadioGroup
            android:id="@+id/rdgrup"
             android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_height="match_parent">

             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Administrador"
                 android:id="@+id/rdadm"
                 android:layout_marginRight="30dp"
                 />

             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Funcionario"
                 android:checked="true"
                 android:id="@+id/rdfun"
                 android:layout_gravity="right" />
        </RadioGroup>


        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_redonda"
            android:text="Salvar"
            android:id="@+id/btnsalva" />


    </LinearLayout>

</ScrollView>
